--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,7 +138,24 @@
       transform: translateY(-50%);
     }
   }
-}
+  --animate-aurora: aurora 8s ease-in-out infinite alternate
+;
+  @keyframes aurora {
+  0% {
+    background-position: 0% 50%;
+    transform: rotate(-5deg) scale(0.9);}
+  25% {
+    background-position: 50% 100%;
+    transform: rotate(5deg) scale(1.1);}
+  50% {
+    background-position: 100% 50%;
+    transform: rotate(-3deg) scale(0.95);}
+  75% {
+    background-position: 50% 0%;
+    transform: rotate(3deg) scale(1.05);}
+  100% {
+    background-position: 0% 50%;
+    transform: rotate(-5deg) scale(0.9);}}}
 
 :root {
   --radius: 0.625rem;
@@ -256,4 +273,32 @@
 ::view-transition-old(root), ::view-transition-new(root) {
     animation: none;
     mix-blend-mode: normal;
+}
+
+@keyframes beam {
+    0% {
+        stroke-dasharray: 0 100;
+    }
+    50% {
+        stroke-dasharray: 50 50;
+    }
+    100% {
+        stroke-dasharray: 100 0;
+    }
+}
+
+@keyframes reverse-gradient {
+    0% {
+        stroke-dasharray: 0 100;
+    }
+    50% {
+        stroke-dasharray: 50 50;
+    }
+    100% {
+        stroke-dasharray: 100 0;
+    }
+}
+
+.animate-reverse-gradient {
+    animation: reverse-gradient 8s linear infinite reverse;
 }
